<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/success_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_activity_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </FrameLayout>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/wikipedia_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layoutDescription="@xml/motion_scene_search">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_layout"
            app:srcCompat="@drawable/baseline_search_24"
            android:contentDescription="@string/search_word"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_word"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/baseline_check_24"
            app:endIconTint="@color/search_icon_color"
            app:endIconMode="custom"
            app:helperText="@string/search_space"
            app:layout_constraintBottom_toTopOf="@+id/main_activity_recyclerview"
            app:layout_constraintStart_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>



    <FrameLayout
        android:id="@+id/loading_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_horizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ProgressBar
            android:id="@+id/progress_bar_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/error_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_textview_stub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button" />
    </LinearLayout>
</FrameLayout>
